# ferrocene

./: .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .travis.yml  .yarnrc.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.rst  Cargo.toml  INSTALL.md  README.md  README.rst  RELEASES.md  REUSE.toml  TRADEMARK.md  a.py  appveyor.yml  aws-bootstrap.sh  azure-pipelines.yml  bindings.txt  bootstrap.example.toml  bootstrap.old.toml  bors.toml  build.rs  config.example.toml  config.toml.example  coverage-keys.txt  edition-hack.py  ferrocene-test-outcomes-7971d8973.tar.xz  generate-random-ids.py  libbad_trait_annotation.rlib  libgccjit.version  license-metadata.json  make.bat  make.py  make_common.py  output  package.json  (+12 more)
backtrace-sys/: Cargo.toml  build.rs
backtrace-sys/src/: lib.rs
compiler/rustc_ast_pretty/: Cargo.toml
compiler/rustc_feature/: Cargo.toml
compiler/rustc_feature/src/: accepted.rs  builtin_attrs.rs  unstable.rs
crates/as-if-std/: Cargo.toml
crates/as-if-std/src/: lib.rs
crates/backtrace-sys/: Cargo.toml  build.rs
ferrocene/ci/scripts/utils/: pyproject.toml
ferrocene/doc/: glossary.rst  pyproject.toml  qualification-outcomes-index-entries.js  scope.rst  sphinx-substitutions.toml  symbol-report.csv  symbol-report.json  target-names.toml
ferrocene/doc/breadcrumbs/: ferrocene-breadcrumbs.css  sphinx-template.html
ferrocene/doc/core-certification/signature/: config.toml  signature.toml
ferrocene/doc/core-certification/src/: code-coverage.rst  conf.py  index.rst  norm-mapping.rst  requirement-review.rst  safety-plan.rst  subset-api-docs.rst  subset.rst  testing-plan.rst
ferrocene/doc/document-list/exts/: ferrocene_document_list.py
ferrocene/doc/document-list/signature/: config.toml  signature.toml
ferrocene/doc/document-list/src/: conf.py  index.rst  project-documents.rst  reference-documents.rst  scope.rst
ferrocene/doc/evaluation-plan/signature/: config.toml  signature.toml
ferrocene/doc/evaluation-plan/src/: conf.py  index.rst  link-with-iec-61508-requirements.rst  link-with-iec-62304-requirements.rst  link-with-iec-requirements.rst  link-with-iso-26262-requirements.rst  link-with-iso-requirements.rst  method.rst  purpose.rst  qualification-scope.rst  references.rst  scope.rst  terms.rst
ferrocene/doc/evaluation-report/signature/: config.toml  signature.toml
ferrocene/doc/evaluation-report/src/: conf.py  detection-measures-table.rst  hazop-words.rst  hazop.rst  index.rst  method.rst  potential-errors.rst  purpose.rst  references.rst  scope.rst  terms.rst  tool-analysis.rst  use-cases.rst
ferrocene/doc/index/: index.html
ferrocene/doc/index/index-assets/: index.css
ferrocene/doc/internal-procedures/signature/: config.toml  signature.toml
ferrocene/doc/internal-procedures/src/: backports.rst  bors.rst  code-coverage.rst  conf.py  cross-compiling.rst  doc-procedures.rst  external-contributions.rst  index.rst  issues.rst  known-problems.rst  licensing.rst  manual-upstream-pulls.rst  onboarding.rst  pe-procedures.rst  purpose.rst  references.rst  release-notes.rst  setup-local-env.rst  subtree-pulls.rst  terms.rst  test-variants.rst  testing-other-targets.rst  upstream-pulls.rst  working-with-the-ci.rst
ferrocene/doc/libcore-certification/src/: code-coverage.rst  conf.py  index.rst  libcore-subset-api-docs.rst  libcore-subset.rst  libcore-subset.tsv  norm-mapping.rst  safety-plan.rst  testing-plan.rst
ferrocene/doc/libcore-qualification/src/: conf.py  index.rst  libcore-subset-api-docs.rst  libcore-subset.rst  norm-mapping.rst  requirement-review.rst  testing-plan.rst
ferrocene/doc/public-docs-warning/: README.md  header.html  public-docs-warning.css
ferrocene/doc/qnx7-manual/src/: conf.py  index.rst  overview.rst  scope.rst
ferrocene/doc/qnx7/src/: aarch64-unknown-nto-qnx710.rst  conf.py  index.rst  targets.rst  x86_64-pc-nto-qnx710.rst
ferrocene/doc/qualification-plan/signature/: config.toml  signature.toml
ferrocene/doc/qualification-plan/src/: change-tracking.rst  ci.rst  conf.py  details.rst  development.rst  documentation.rst  history.rst  index.rst  infrastructure.rst  kp-tracking.rst  organization.rst  packaging.rst  patching.rst  purpose.rst  references.rst  release.rst  scope.rst  terms.rst  testing.rst  traceability-matrix.rst  validation.rst
ferrocene/doc/qualification-report/signature/: config.toml  signature.toml
ferrocene/doc/qualification-report/src/: conf.py  index.rst  purpose.rst  references.rst  requirements-traceability.rst  scope.rst  statement.rst  tests-template.jinja2  tests.rst
ferrocene/doc/release-notes/src/: 23.06.0.rst  24.05.0.rst  24.08.0.rst  24.11.0.rst  25.02.0.rst  25.05.0.rst  25.08.0.rst  25.11.0.rst  26.02.0.rst  26.05.0.rst  conf.py  index.rst  next.rst
ferrocene/doc/requirements/src/: conf.py  index.rst  self-test.rst
ferrocene/doc/safety-manual/signature/: signature.toml
ferrocene/doc/safety-manual/src/: changelog.rst  conf.py  constraints.rst  customer-interactions.rst  degraded-environment.rst  environment.rst  index.rst  known-problems.rst  options.rst  procedures.rst  purpose.rst  references.rst  scope.rst  terms.rst  unsafety.rst  usage.rst  user-responsibility.rst
ferrocene/doc/specification/: .flake8  .gitattributes  .gitignore  CONTRIBUTING.rst  README.rst  bors.toml  generate-random-ids.py  make.py  pyproject.toml  triagebot.toml  version.rst
ferrocene/doc/sphinx-shared-resources/: .gitignore  PYPI-README.md  README.md  make_common.py  pyproject.toml  requirements.in  requirements.txt
ferrocene/tools/blanket/: Cargo.toml  README.md  run.nu
ferrocene/tools/document-signatures/: Cargo.toml  diff-signature.py  diff.py
ferrocene/tools/generate-tarball/: Cargo.toml
ferrocene/tools/libcore-statistics/: .gitignore  Cargo.toml  README.md
ferrocene/tools/traceability-matrix/: Cargo.toml  README.md
ferrocene/vendored-deps/criticaltrust/: Cargo.toml
src/build_helper/: Cargo.toml
src/build_helper/src/: diff.rs  ferrocene_targets.rs  git.rs  lib.rs  metrics.rs  symbol_report.rs  targets.rs
src/tools/error_index_generator/: Cargo.toml
(+9336 files in other folders)
