[package]
name = "comprehensive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
llvm_profparser = "0.8.3"
rustc-demangle = { version = "0.1.26", features = ["std"] }
rustdoc-types = "0.56.0"
serde_json = "1.0.145"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
