[package]
name = "backtrace-sys"
version = "0.1.18"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/backtrace-rs"
homepage = "https://github.com/alexcrichton/backtrace-rs"
documentation = "http://alexcrichton.com/backtrace-rs"
description = """
Bindings to the libbacktrace gcc library
"""

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
