[package]
name = "rustc_ast_pretty"
version = "0.0.0"
edition = "2021"

[dependencies]
# tidy-alphabetical-start
itertools = "0.12"
rustc_ast = { path = "../rustc_ast" }
rustc_lexer = { path = "../rustc_lexer" }
rustc_span = { path = "../rustc_span" }
thin-vec = "0.2.12"
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
rustc_use_parallel_compiler = [
    'rustc_ast/rustc_use_parallel_compiler',
]
# tidy-alphabetical-end
