[package]
name = "rustc_feature"
version = "0.0.0"
edition = "2021"

[dependencies]
# tidy-alphabetical-start
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_span = { path = "../rustc_span" }
# tidy-alphabetical-end

[features]
# tidy-alphabetical-start
rustc_use_parallel_compiler = ['rustc_data_structures/rustc_use_parallel_compiler']
# tidy-alphabetical-end
