[package]
name = "as-if-std"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"
publish = false

[lib]
test = false
doc = false
doctest = false
bench = false

[dependencies]
cfg-if = "1.0"
rustc-demangle = "0.1.4"
libc = { version = "0.2.45", default-features = false }
addr2line = { version = "0.16.0", default-features = false, optional = true }
miniz_oxide = { version = "0.4.0", default-features = false }

[dependencies.object]
version = "0.27"
default-features = false
optional = true
features = ['read_core', 'elf', 'macho', 'pe', 'unaligned', 'archive']

[features]
default = ['backtrace']
backtrace = ['addr2line', 'object']
