[package]
name = "backtrace-sys"
version = "0.1.32"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/backtrace-rs"
homepage = "https://github.com/alexcrichton/backtrace-rs"
documentation = "http://alexcrichton.com/backtrace-rs"
description = """
Bindings to the libbacktrace gcc library
"""

[dependencies]
libc = { version = "0.2", default-features = false }
core = { version = '1.0.0', optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = '0.1.2', optional = true }

[build-dependencies]
cc = "1.0.37"

[features]
rustc-dep-of-std = ['core', 'compiler_builtins']
