[project]
name = "ferrocene-docs"
version = "0.0.0"
requires-python = ">= 3.10"
dependencies = [
    "sphinx",
    "sphinx-autobuild",
    "tomli",
    "myst_parser",
    "pyyaml",
    "semver",

    # Internal dependencies:
    "ferrocene-sphinx-shared-resources",
]

[tool.uv.sources]
ferrocene-sphinx-shared-resources = { workspace = true }

[tool.uv.workspace]
members = ["sphinx-shared-resources/"]
