[package]
name = "build_helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
#
# Ferrocene additions
serde_json = "1"
similar = "2"

[features]
metrics = ["dep:serde", "dep:serde_derive"]
