# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers

[project]
name = "ferrocene-sphinx-shared-resources"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "sphinx ~= 8.0",
    "sphinx-needs ~= 4.2",
    "tomli ~= 2.2",
]

[project.entry-points."sphinx.builders"]
ferrocene-intersphinx = "ferrocene_intersphinx_builder"

[project.entry-points."sphinx.html_themes"]
ferrocene = "ferrocene_theme"

[tool.hatch.build]
only-include = ["src"]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
