[package]
name = "comprehensive"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
llvm_profparser = "0.8.3"
maud = { version = "0.27.0" }
# rustc-demangle = { version = "0.1.26", features = ["std"] }
# rustdoc-types = "0.56.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

