[package]
name = "blanket"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
llvm_profparser = "0.8.3"
maud = { version = "0.27.0" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
structopt = { version = "0.3.26", features = ["color"] }
tracing = "0.1"
tracing-subscriber = "0.3"

