[package]
name = "blanket"
edition.workspace = true

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
build_helper = { path = "../../../src/build_helper" }
llvm_profparser = { version = "0.9.1", default-features = false }
maud = { version = "0.27.0" }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

