# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers

[package]
name = "document-signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
asn1-rs = "0.5.1"
base64 = "0.13.1"
getrandom = { version = "0.2.8", features = ["std"] }
hex = "0.4.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
tempfile = "3.3.0"
toml = "0.5.7"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
x509-parser = "0.14.0"
