# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers

[package]
name = "document-signatures"
edition.workspace = true

[dependencies]
anyhow = "1.0.65"
asn1-rs = "0.5.1"
base64 = "0.21.0"
clap = { version = "4.5.27", features = ["derive"] }
getrandom = { version = "0.2.10", features = ["std"] }
hex = "0.4.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.85"
sha2 = "0.10.6"
tempfile = "3.3.0"
toml = "0.5.7"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
x509-parser = "0.14.0"
