# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers
# SPDX-FileCopyrightText: The Rust Project Developers (see https://thanks.rust-lang.org)

[package]
name = "generate-tarball"
edition.workspace = true

[dependencies]
anyhow = "1.0.19"
rayon = "1.0"
tar = "0.4.38"
walkdir = "2"
xz2 = "0.1.4"
criticaltrust = { version = "0.2.0", features = ["aws-kms"] }
sha2 = "0.10.7"
aws-sdk-kms = "0.29.0"
aws-config = "0.56.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "rt"] }
serde_json = "1.0.99"

[dependencies.clap]
features = ["derive"]
version = "4.2.0"

[dev-dependencies]
insta = "1.31.0"
tempfile = "3.5.0"
