[package]
name = "libcore-statistics-jan2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rustdoc-types = "0.39"
serde_json = "1"
syn = { version = "2", default-features = false, features = ["derive", "parsing"] }
tempfile = "3"
tokei = "12"
