[package]
name = "libcore-statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rustdoc-types = "0.55"
serde_json = "1"
syn = { version = "2", default-features = false, features = ["derive", "parsing"] }
tempfile = "3"
tokei = { version = "12", default-features = true }
