# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers

[package]
name = "traceability-matrix"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
askama = { version = "0.11.0", default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
tempfile = "3.2.0"
