[package]
name = "criticaltrust"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Digital signatures implementation for criticalup"

[dependencies]
base64 = "0.21.2"
elliptic-curve = { version = "0.13.5", features = ["pkcs8"]  }
p256 = { version = "0.13.2", features = ["ecdsa-core"]  }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.7"
thiserror = "1.0.30"
time = { version = "0.3.7", features = ["std", "serde", "serde-well-known"] }
aws-sdk-kms = { version = "0.24.0", optional = true  }
aws-config = { version = "0.54.1", optional = true }
tokio = { version = "1.16.0", features = ["rt", "rt-multi-thread"], optional = true }

[dev-dependencies]
itertools = "0.10.3"

[features]
aws-kms = ["aws-sdk-kms", "aws-config", "tokio"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
