[package]
name = "error_index_generator"
version = "0.0.0"
edition = "2021"
workspace = "../rustbook"

[dependencies]
# Ferrocene note: version pinned to avoid a panic
# https://github.com/rust-lang/rust/issues/137052
mdbook = { version = "=0.4.43", default-features = false, features = ["search"] }

[[bin]]
name = "error_index_generator"
path = "main.rs"
