# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: The Ferrocene Developers

[project]
name = "utils"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["boto3 ~= 1.36", "pyyaml ~= 6.0", "zstandard ~= 0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
